<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"/>

    <item android:id="@+id/rep_pothole"
        android:title="@string/report_jalan"
        android:icon="@drawable/ic_report_black_24dp"/>

    <item android:id="@+id/rep_track"
        android:title="@string/history_rep"
        android:icon="@drawable/ic_location_searching_black_24dp"/>

<!--    <item android:id="@+id/about"-->
<!--        android:title="@string/about_us"-->
<!--        android:icon="@drawable/ic_contact_mail_black_24dp"/>-->

    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"/>
</menu>